Merged revisions 4205-4217 via svnmerge from https://svn.codehaus.org/mule/trunk/mule
........
  r4205 | Lajos | 2006-12-08 18:25:51 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Updated all example scripts with provision for MULE_BASE
........
  r4207 | Lajos | 2006-12-08 18:45:28 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Better muleHome/muleBase comparison - thanks Andrew
........
  r4208 | Lajos | 2006-12-08 19:06:19 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Rolling back 4205 on poms
........
  r4209 | Lajos | 2006-12-08 19:07:25 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Rolling back 4205 on config
........
  r4210 | Lajos | 2006-12-08 19:07:53 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Rolling back 4205 on poms
........
  r4211 | Lajos | 2006-12-08 19:08:31 +0100 (Fr, 08 Dez 2006) | 1 line
  
  Rolling back 4205 on poms
........
  r4216 | aperepel | 2006-12-08 20:31:23 +0100 (Fr, 08 Dez 2006) | 1 line
  
  MULE-1254 MuleBeanDefinitionReader shall be able to read bean definitions from servlet context
........
  r4217 | holger | 2006-12-08 21:03:06 +0100 (Fr, 08 Dez 2006) | 1 line
  
  obsolete
........


git-svn-id: file:///home/projects/mule/scm@4218 bf997673-6b11-0410-b953-e057580c5b09